--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/Preferences.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/Preferences.fxml
@@ -26,13 +26,13 @@
                 <Insets left="20.0" right="20.0" top="50.0" />
             </padding>
          <children>
-            <RadioButton mnemonicParsing="false" text="Weight Loss">
+            <RadioButton fx:id="wlRadio" mnemonicParsing="false" text="Weight Loss">
                <toggleGroup>
                   <ToggleGroup fx:id="physiqueGroup" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton layoutX="135.0" layoutY="236.0" mnemonicParsing="false" text="Lean" toggleGroup="$physiqueGroup" />
-            <RadioButton layoutX="135.0" layoutY="244.0" mnemonicParsing="false" text="Muscular" toggleGroup="$physiqueGroup" />
+            <RadioButton fx:id="leanRadio" layoutX="135.0" layoutY="236.0" mnemonicParsing="false" text="Lean" toggleGroup="$physiqueGroup" />
+            <RadioButton fx:id="muscularRadio" layoutX="135.0" layoutY="244.0" mnemonicParsing="false" text="Muscular" toggleGroup="$physiqueGroup" />
             <Button mnemonicParsing="false" onAction="#submitPref" text="Submit" />
             <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
