--- a/app/src/main/resources/com/fss/everythingapp/simulations/SimulationsMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/simulations/SimulationsMenu.fxml
@@ -17,7 +17,7 @@
                   <Button layoutX="123.0" layoutY="20.0" mnemonicParsing="false" onAction="#openDoubleSlit" styleClass="material-button" text="Double Slit" textAlignment="CENTER" />
                   <Button layoutX="198.0" layoutY="20.0" mnemonicParsing="false" onAction="#openMomentum" styleClass="material-button" text="Momentum" textAlignment="CENTER" />
                   <Button layoutX="238.0" layoutY="20.0" mnemonicParsing="false" onAction="#openPhotoElectric" styleClass="material-button" text="Photo-Electric" textAlignment="CENTER" />
-                  <Button layoutX="131.0" layoutY="55.0" mnemonicParsing="false" onAction="#Back" styleClass="material-button" text="Back" textAlignment="CENTER" />
+                  <Button layoutX="131.0" layoutY="55.0" mnemonicParsing="false" onAction="#back" styleClass="material-button" text="Back" textAlignment="CENTER" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
