--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/LogMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/LogMenu.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            prefHeight="600.0" prefWidth="335.0">
+<BorderPane prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.fitness.Controllers.LoggingController">
     
     <top>
         <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-4.0" BorderPane.alignment="CENTER">
@@ -22,20 +21,27 @@
     <center>
         <VBox alignment="TOP_CENTER" spacing="5.0" BorderPane.alignment="CENTER">
             <padding>
-                <Insets top="40.0" left="20.0" right="20.0"/>
+                <Insets left="20.0" right="20.0" top="40.0" />
             </padding>
             <children>
-                <TextField fx:id="caloriesEaten" promptText="Calories"/>
-                <TextField fx:id="proteinEaten" promptText="Protein"/>
-                <TextField fx:id="carbsEaten" promptText="Carbs"/>
-                <TextField fx:id="fatsEaten" promptText="Fats"/>
-                <TextField fx:id="cholesterolEaten" promptText="Cholesterol"/>
-                <Button mnemonicParsing="false" onAction="#submitFoodLog" text="Submit Food"/>
-                <TextField fx:id="coloriesBurnt" promptText="Calories Burnt"/>
-                <Button mnemonicParsing="false" onAction="#submitExcersizeLog" text="Submit Excersize"/>
-                <TextField fx:id="timeWentSleep" promptText="Time went to sleep"/>
-                <TextField fx:id="timeWokeUp" promptText="Time Woke up"/>
-                <Button mnemonicParsing="false" onAction="#submitSleepLog" text="Submit Sleep"/>
+                <TextField fx:id="caloriesEaten" promptText="Calories" />
+                <TextField fx:id="proteinEaten" promptText="Protein" />
+                <TextField fx:id="carbsEaten" promptText="Carbs" />
+                <TextField fx:id="fatsEaten" promptText="Fats" />
+                <Button mnemonicParsing="false" onAction="#submitFoodLog" text="Submit Food" />
+                <TextField fx:id="coloriesBurnt" promptText="Calories Burnt" />
+                <Button mnemonicParsing="false" onAction="#submitExcersizeLog" text="Submit Excersize" />
+                <TextField fx:id="timeWentSleep" promptText="Time went to sleep" />
+                <TextField fx:id="timeWokeUp" promptText="Time Woke up" />
+                <Button mnemonicParsing="false" onAction="#submitSleepLog" text="Submit Sleep" />
+            <VBox alignment="CENTER">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#backToMM" text="Back" />
+               </children>
+               <padding>
+                  <Insets top="55.0" />
+               </padding>
+            </VBox>
             </children>
         </VBox>
     </center>
