--- a/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/simulations/projectile_motion.fxml
@@ -106,6 +106,21 @@
                               </Label>
                            </children>
                         </HBox>
+                        <HBox layoutX="19.0" layoutY="19.0" prefHeight="40.0" prefWidth="368.0">
+                           <children>
+                              <Label prefHeight="31.0" prefWidth="102.0" text="Ball Size" />
+                              <Slider fx:id="ballSlider" majorTickUnit="10.0" max="50.0" min="10.0" minorTickCount="5" prefHeight="38.0" prefWidth="279.0" showTickLabels="true" showTickMarks="true">
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </Slider>
+                              <Label fx:id="ballSizeLabel" alignment="CENTER" ellipsisString="" prefHeight="30.0" prefWidth="44.0" text="10">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
                         <HBox prefHeight="40.0" prefWidth="368.0">
                            <children>
                               <Label prefHeight="31.0" prefWidth="102.0" text="Animation Speed" />
@@ -147,5 +162,15 @@
         </panes>
       </Accordion>
       <Button fx:id="launch" mnemonicParsing="false" prefHeight="46.0" prefWidth="215.0" text="Launch" />
+      <VBox layoutX="13.0" layoutY="95.0" prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <Label text="Vₓ = 0" fx:id="xVeloLabel" />
+            <Label fx:id="yVeloLabel" text="Vᵧ = 0" />
+            <Label text="X" fx:id="xLabel" />
+            <Label fx:id="yLabel" text="Y" />
+            <Label fx:id="veloLabel" text="V" />
+            <Label fx:id="timeLabel" text="t" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
