--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/AppointmentLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/AppointmentLayout.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AppointmentController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AppointmentController">
    <top>
       <Label text="Student Services Apointments" BorderPane.alignment="CENTER">
          <font>
@@ -18,20 +18,20 @@
       </Label>
    </top>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" text="Please enter your Name and Grade" translateX="100.0">
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Please enter your Name and Grade">
                <font>
                   <Font name="Rockwell" size="25.0" />
                </font>
             </Label>
-            <SplitPane dividerPositions="0.4178082191780822" maxWidth="-Infinity" prefHeight="160.0" prefWidth="350.0" translateX="120.0">
+            <SplitPane dividerPositions="0.4178082191780822" maxWidth="-Infinity" translateX="120.0">
               <items>
-                  <TextField maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" promptText="Name" />
-                  <ChoiceBox prefWidth="150.0" />
+                  <TextField promptText="Name" />
+                  <ChoiceBox />
               </items>
             </SplitPane>
-            <Button alignment="CENTER" mnemonicParsing="false" onAction="#enterBtnPressed" text="Enter" textAlignment="CENTER" translateX="278.0" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#enterBtnPressed" text="Enter" textAlignment="CENTER" />
          </children>
       </VBox>
    </center>
