--- a/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/TimeslotsLayout.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/studentservicesappointment/fmxl/TimeslotsLayout.fxml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TimeslotsController">
+   <center>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" text="9:00 am - 9:30 am" />
+            <Button mnemonicParsing="false" text="9:30 am - 10:00 am" />
+            <Button mnemonicParsing="false" text="10:00 am - 10:30 am" />
+            <Button mnemonicParsing="false" text="10:30 am - 11:00 am" />
+            <Button mnemonicParsing="false" text="11:00 am - 11:30 am" />
+            <Button mnemonicParsing="false" text="11:30 am - 12:00 pm" />
+            <Button mnemonicParsing="false" text="12:00 am - 12:30 pm" />
+            <Button mnemonicParsing="false" text="12:30 pm - 1:00 pm" />
+         </children>
+      </VBox>
+   </center>
+   <top>
+      <Label text="Choose a Timeslot" BorderPane.alignment="CENTER" />
+   </top>
+</BorderPane>
