--- a/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/app/fxml/MainMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" stylesheets="@/com/fss/everythingapp/css/menu.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" stylesheets="@/com/fss/everythingapp/css/menu.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
@@ -18,6 +18,7 @@
                         <Button mnemonicParsing="false" onAction="#openStudentServices" styleClass="material-button" text="Student&#10;Services" textAlignment="CENTER" />
                         <Button mnemonicParsing="false" onAction="#openCalendar" styleClass="material-button" text="Calendar" textAlignment="CENTER" />
                         <Button mnemonicParsing="false" onAction="#openBuses" styleClass="material-button" text="Buses" textAlignment="CENTER" />
+                        <Button mnemonicParsing="false" onAction="#openSimulations" styleClass="material-button" text="Simulations" textAlignment="CENTER" />
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
