--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateEvent.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateEvent.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.CreateEventController">
+<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.CreateEventController">
    <children>
       <Label alignment="CENTER" text="Create New Event">
          <VBox.margin>
@@ -25,13 +25,13 @@
          </VBox.margin>
       </TextField>
       <Label text="Start Date" />
-      <DatePicker fx:id="startDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy/mm/dd">
+      <DatePicker fx:id="startDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy-mm-dd">
          <VBox.margin>
             <Insets bottom="15.0" />
          </VBox.margin>
       </DatePicker>
       <Label text="End Date" />
-      <DatePicker fx:id="endDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy/mm/dd">
+      <DatePicker fx:id="endDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy-mm-dd">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
