--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/CreateTask.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.CreateTaskController">
+<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.CreateTaskController">
    <children>
       <Label alignment="CENTER" text="Create New Task">
          <VBox.margin>
@@ -25,7 +25,7 @@
          </VBox.margin>
       </TextField>
       <Label text="Due Date" />
-      <DatePicker fx:id="dueDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy/mm/dd">
+      <DatePicker fx:id="dueDatePicker" prefHeight="25.0" prefWidth="125.0" promptText="yyyy-mm-dd">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
