--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/DayView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/DayView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,7 +12,7 @@
 
 <VBox fx:id="rootContainer" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.DayViewController">
    <children>
-      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="335.0">
+      <HBox alignment="CENTER" minHeight="30.0" style="-fx-background-color: LIGHTGREY;">
          <children>
             <Button mnemonicParsing="false" text="Day">
                <HBox.margin>
@@ -30,7 +31,11 @@
             </Button>
          </children>
       </HBox>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" text="[Day], [Month] [#], [Year]" />
+      <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="110.0" promptText="yyyy-mm-dd">
+         <VBox.margin>
+            <Insets bottom="2.0" top="2.0" />
+         </VBox.margin>
+      </DatePicker>
       <GridPane alignment="CENTER" gridLinesVisible="true" prefHeight="607.0" prefWidth="335.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.0" minWidth="10.0" prefWidth="30.0" />
@@ -66,7 +71,7 @@
             <Label alignment="CENTER" prefHeight="0.0" prefWidth="28.0" text="0:00" />
          </children>
       </GridPane>
-      <HBox alignment="CENTER" prefHeight="2.0" prefWidth="335.0">
+      <HBox alignment="CENTER" minHeight="30.0" style="-fx-background-color: LIGHTGREY;">
          <children>
             <Button mnemonicParsing="false" onAction="#exit" text="Exit">
                <HBox.margin>
