--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.WeekViewController">
+<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.WeekViewController">
    <children>
-      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="335.0">
+      <HBox alignment="CENTER" minHeight="30.0" prefWidth="335.0" style="-fx-background-color: LIGHTGREY;">
          <children>
             <Button mnemonicParsing="false" onAction="#setDayView" text="Day">
                <HBox.margin>
@@ -32,7 +33,12 @@
             </Button>
          </children>
       </HBox>
-      <Label prefHeight="0.0" prefWidth="327.0" text="   SUN       MON       TUE        WED       THU         FRI         SAT" />
+      <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="110.0" promptText="yyyy-mm-dd">
+         <VBox.margin>
+            <Insets bottom="2.0" top="2.0" />
+         </VBox.margin>
+      </DatePicker>
+      <Label prefHeight="0.0" prefWidth="327.0" text="   SUN      MON       TUE        WED       THU        FRI         SAT" />
       <GridPane gridLinesVisible="true" prefHeight="285.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -51,7 +57,7 @@
          </rotationAxis>
       </GridPane>
       <ScrollPane prefHeight="250.0" prefWidth="335.0" />
-      <HBox alignment="CENTER" prefHeight="2.0" prefWidth="335.0">
+      <HBox alignment="CENTER" minHeight="30.0" style="-fx-background-color: LIGHTGREY;">
          <children>
             <Button mnemonicParsing="false" onAction="#exit" text="Exit">
                <HBox.margin>
