--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
@@ -38,7 +38,7 @@
             <Insets bottom="2.0" top="2.0" />
          </VBox.margin>
       </DatePicker>
-      <Label prefHeight="0.0" prefWidth="327.0" text="   SUN      MON       TUE        WED       THU        FRI         SAT" />
+      <Label prefHeight="0.0" prefWidth="327.0" text="   SUN      MON       TUE        WED       THU        FRI          SAT" />
       <GridPane gridLinesVisible="true" prefHeight="285.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -56,7 +56,7 @@
             <Point3D />
          </rotationAxis>
       </GridPane>
-      <ScrollPane prefHeight="250.0" prefWidth="335.0" />
+      <ScrollPane fx:id="dateListPane" prefHeight="250.0" prefWidth="335.0" />
       <HBox alignment="CENTER" minHeight="30.0" style="-fx-background-color: LIGHTGREY;">
          <children>
             <Button mnemonicParsing="false" onAction="#back" text="Back">
