--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/WeekView.fxml
@@ -39,7 +39,7 @@
          </VBox.margin>
       </DatePicker>
       <Label prefHeight="0.0" prefWidth="327.0" text="   SUN      MON       TUE        WED       THU        FRI          SAT" />
-      <GridPane gridLinesVisible="true" prefHeight="285.0">
+      <GridPane fx:id="CalendarGridPane" gridLinesVisible="true" prefHeight="285.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
