--- a/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
+++ b/app/src/main/resources/com/fss/everythingapp/calendar/fxml/MonthView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.MonthViewController">
+<VBox fx:id="rootContainer" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fss.everythingapp.calendar.MonthViewController">
    <children>
       <HBox alignment="CENTER" minHeight="30.0" prefHeight="30.0" prefWidth="335.0" style="-fx-background-color: LIGHTGREY;">
          <children>
@@ -38,7 +38,7 @@
          </VBox.margin>
       </DatePicker>
       <Label prefHeight="0.0" prefWidth="327.0" text="   SUN      MON       TUE        WED       THU        FRI          SAT" />
-      <GridPane gridLinesVisible="true" prefHeight="285.0">
+      <GridPane fx:id="calendarGridPane" gridLinesVisible="true" prefHeight="285.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
